# vkmm-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vkmm.cmake  vkmm.pro
3rdpatry/qtsingleapplication/src/: qtlocalpeer.cpp  qtsingleapplication.cpp
common/: get-revision.sh
common/icons/: vk-icons.xcf
common/win32-updater/: win32-updater.sln
common/win32-updater/win32-updater/: res.aps  res.rc  resource.h  win32-updater.vcxproj  win32-updater.vcxproj.filters
common/win32-updater/win32-updater/src/: main.cpp  stdafx.cpp  stdafx.h  updater.cpp  updater.h
res/: res.qrc  res.rc
res/css/: global-linux.css  global-win.css
res/sys/: vkmm-msdos-update.bat
skel/linux/all/: vkmm.sh
src/: config.h  main.cpp  version.h.in
src/core/: common.cpp  common.h  core.cpp  core.h  mapilastfm.cpp  mapilastfm.h  mapivk.cpp  mapivk.h  mcacheaudio.cpp  mcacheaudio.h  mnetowrkaccess.cpp  mnetowrkaccess.h  mnetworkcookiejar.cpp  mnetworkcookiejar.h  mplayer.cpp  mplayer.h  mplaylist.cpp  mplaylist.h  mrefcounter.cpp  mrefcounter.h  mstream.cpp  mstream.h  mupdater.cpp  mupdater.h
src/ui/: wdglfmlinecompleted.cpp  wdglfmlinecompleted.h  wdgplaylist.cpp  wdgplaylist.h  wdgplayslider.cpp  wdgplayslider.h  wdgweb.cpp  wdgweb.h  wndabout.cpp  wndabout.h  wndabout.ui  wndloginbrowser.cpp  wndloginbrowser.h  wndloginbrowser.ui  wndmain.cpp  wndmain.h  wndmain.ui  wndmessage.cpp  wndmessage.h  wndmessage.ui  wndplaylists.cpp  wndplaylists.h  wndplaylists.ui  wndselectvkfriends.cpp  wndselectvkfriends.h  wndselectvkfriends.ui  wndsendvkfirendaudio.cpp  wndsendvkfirendaudio.h  wndsendvkfirendaudio.ui  wndsessionload.cpp  wndsessionload.h  wndsessionload.ui  wndsettings.cpp  wndsettings.h  wndsettings.ui  wndupdate.cpp  wndupdate.h  wndupdate.ui  wndupdatewin.cpp  wndupdatewin.h  (+1 more)
